--- a/settings.html
+++ b/settings.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Settings</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -52,7 +53,7 @@
         </div>
     </section>
 
-    <div class="container my-5">
+    <div class="container py-5">
         <form action="" class="change-password">
             <h4>Change Passowrd</h4>
             <hr>
@@ -65,7 +66,9 @@
         </form>
 
         <div class="address-section my-5">
-            <h3 class="mb-5">Your Address</h3>
+            <h3 class="mb-5">Your Address
+                <hr>
+            </h3>
             <ul class="address-content">
                 <li>Emporium Mall Road Lhr<i class="fa fa-pencil"></i></li>
                 <hr>
