--- a/order.html
+++ b/order.html
@@ -40,7 +40,7 @@
             <h5 class="weight-cake"><span class="mr-5 pr-5">Pounds: </span><span class="ml-5 pl-5"></span><i class="fa fa-minus mr-3" id="pound-d"></i><span id="pound-cake">1</span><i id="pound-i" class="fa fa-plus ml-3"></i></span>
             </h5>
             <hr>
-            <h5 class="text-left mb-4">Choose toppings (if any)</h5>
+            <h5 class="text-left mb-4">Choose toppings (only one if any)</h5>
             <ul class="toppings">
                 <li><input name="topping" type="radio">Sprinkles<span>+ PRK 10</span></li>
                 <li><input name="topping" type="radio">Choco Chips<span>+ PRK 10</span></li>
