--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           </p>
         </div>
       </div>
-      <img src="..\images\images.jpg" class="img-fluid" alt="" />
+      <!-- <img src="..\images\images.jpg" class="img-fluid" alt="" />  -->
     </div>
   </section>
 
