Update Admin Panel

--- a/login.html
+++ b/login.html
@@ -109,7 +109,7 @@
             if (msg[2] == "false") {
               window.location.replace("index.html");
             } else {
-              window.location.replace("admin.php");
+              window.location.replace("admin.html");
             }
 
           } else if (response.result === "failure") {
