--- a/settings.html
+++ b/settings.html
@@ -3,22 +3,23 @@
 
 <head>
     <title>Settings</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <script src="scripts/jquery-3.4.1.min.js"></script>
 
     <script>
-        $(function() {
-            $("#header").load("header.html", function() {
+        $(function () {
+            $("#header").load("header.html", function () {
                 let navBar = document.getElementById("mainNav");
                 let headerDiv = document.getElementById("header");
-                let orderTab = document.getElementById("order");
 
                 headerDiv.style.height = navBar.getBoundingClientRect().height + "px";
-
-                orderTab.classList.add("active");
             });
         });
     </script>
@@ -37,7 +38,8 @@
             <h4 class="text-center my-4 pt-3">Edit Address</h4>
             <div>
                 <textarea name="edited-address" id="edit-address" cols="30" rows="10"></textarea> <br> <br>
-                <input style="width: 50%" type="submit" class="btn btn-primary" id="update-address" value="update address">
+                <input style="width: 50%" type="submit" class="btn btn-primary" id="update-address"
+                    value="update address">
             </div>
         </div>
     </section>
@@ -48,19 +50,20 @@
             <h4 class="text-center my-4 pt-3">Add New Address</h4>
             <div>
                 <textarea name="new-address" id="add-new-address" cols="30" rows="10"></textarea> <br> <br>
-                <input style="width: 50%" type="submit" class="btn btn-primary" id="add-address" value="add new address">
+                <input style="width: 50%" type="submit" class="btn btn-primary" id="add-address"
+                    value="add new address">
             </div>
         </div>
     </section>
 
     <div class="container py-5">
-        <form action="" class="change-password">
+        <form id="changePassForm" class="change-password">
             <h4>Change Passowrd</h4>
             <hr>
             <div class="form-group">
-                <input type="password" placeholder="Current Password">
-                <input type="password" placeholder="New Passowrd">
-                <input type="password" placeholder="Confirm New Password">
+                <input id="currPass" type="password" placeholder="Current Password" required>
+                <input id="newPass" type="password" placeholder="New Passowrd" required>
+                <input id="newPassRe" type="password" placeholder="Confirm New Password" required>
                 <input type="submit" class="btn btn-primary" value="change passowrd">
             </div>
         </form>
@@ -69,7 +72,7 @@
             <h3 class="mb-5">Your Address
                 <hr>
             </h3>
-            <ul class="address-content">
+            <ul id="currentAddresses" class="address-content">
                 <li>Emporium Mall Road Lhr<i class="fa fa-pencil"></i></li>
                 <hr>
             </ul>
@@ -79,15 +82,168 @@
     </div>
 
     <script>
-        $('.address-content').on('click', 'li', function() {
+        let changePassForm = document.getElementById("changePassForm");
+        let addNewAddress = document.getElementById("add-address");
+        let updateAddress = document.getElementById("update-address");
+        let newAddressText = document.getElementById("add-new-address");
+        let updateAddressText = document.getElementById("edit-address");
+
+        let currentAddressesList = document.getElementById("currentAddresses");
+
+        let allCurrAddresses = [];
+        let currEditBox = "none";
+
+        function loadAddresses() {
+            const custId = window.localStorage.getItem("id");
+
+            let data = {
+                cust_id: custId,
+                from: "loadAddresses"
+            };
+
+            $.ajax({
+                type: "POST",
+                url: './includes/settings_commands.php',
+                data: data,
+                dataType: 'JSON',
+                success: function (response) {
+                    if (response.result === "success") {
+                        console.log(response.message);
+                        allCurrAddresses = response.message;
+                        currentAddressesList.innerHTML = "";
+
+                        for (var i = 0; i < allCurrAddresses.length; i++) {
+                            const currAddress = allCurrAddresses[i];
+                            let addressItem = document.createElement("li");
+                            addressItem.setAttribute("name", i + "_" + currAddress['cust_id'] + "_" + currAddress['address_id']);
+                            addressItem.innerHTML = currAddress['address_detail'] + "<i class=\"fa fa-pencil\"></i><hr>";
+                            currentAddressesList.appendChild(addressItem);
+                        }
+
+
+                    } else if (response.result === "failure") {
+                        console.log(response.message);
+                    }
+                }, error: function (xhr, status, error) {
+                    console.log(xhr.responseText);
+                }
+            });
+        }
+
+        loadAddresses();
+
+        changePassForm.addEventListener("submit", event => {
+            event.preventDefault();
+            const currPass = $('#currPass').val();
+            const newPass = $('#newPass').val();
+            const newPassRe = $('#newPassRe').val();
+
+            if (newPass == newPassRe) {
+                const id = window.localStorage.getItem("id");
+
+                let data = {
+                    id: id,
+                    currPass: currPass,
+                    newPass: newPass,
+                    from: "passUpdate"
+                };
+
+                $.ajax({
+                    type: "POST",
+                    url: './includes/settings_commands.php',
+                    data: data,
+                    dataType: 'JSON',
+                    success: function (response) {
+                        if (response.result === "success") {
+                            console.log(response.message);
+                            $('#currPass').val("");
+                            $('#newPass').val("");
+                            $('#newPassRe').val("");
+                        } else if (response.result === "failure") {
+                            console.log(response.message);
+                        }
+                    }, error: function (xhr, status, error) {
+                        console.log(xhr.responseText);
+                    }
+                });
+            }
+        });
+
+        addNewAddress.addEventListener("click", event => {
+            if (newAddressText.value != "") {
+                const id = window.localStorage.getItem("id");
+
+                let data = {
+                    id: id,
+                    address: newAddressText.value,
+                    from: "addAddress"
+                };
+
+                $.ajax({
+                    type: "POST",
+                    url: './includes/settings_commands.php',
+                    data: data,
+                    dataType: 'JSON',
+                    success: function (response) {
+                        if (response.result === "success") {
+                            console.log(response.message);
+                            $('#new-address-popup').addClass('d-none');
+                            loadAddresses();
+                        } else if (response.result === "failure") {
+                            console.log(response.message);
+                        }
+                    }, error: function (xhr, status, error) {
+                        console.log(xhr.responseText);
+                    }
+                });
+            }
+        });
+
+        updateAddress.addEventListener("click", event => {
+            const oldAddress = allCurrAddresses[currEditBox];
+            console.log(oldAddress);
+            if ((updateAddressText.value != "") && (updateAddressText.value != oldAddress['address_detail'])) {
+                const custId = window.localStorage.getItem("id");
+
+                let data = {
+                    cust_id: custId,
+                    address_id: oldAddress['address_id'],
+                    address: updateAddressText.value,
+                    from: "updateAddress"
+                };
+
+                $.ajax({
+                    type: "POST",
+                    url: './includes/settings_commands.php',
+                    data: data,
+                    dataType: 'JSON',
+                    success: function (response) {
+                        if (response.result === "success") {
+                            console.log(response.message);
+                            $('#address-edit-popup').addClass('d-none');
+                            loadAddresses();
+                        } else if (response.result === "failure") {
+                            console.log(response.message);
+                        }
+                    }, error: function (xhr, status, error) {
+                        console.log(xhr.responseText);
+                    }
+                });
+            }
+        });
+
+
+        $('.address-content').on('click', 'li', function () {
             $('#address-edit-popup').removeClass('d-none');
             $('#edit-address').val($(this).text());
+            const itemNameAttrs = (this.getAttribute("name")).split("_");
+            currEditBox = itemNameAttrs[0];
         });
-        $('.fa-times').click(function() {
+        $('.fa-times').click(function () {
             $('#address-edit-popup').addClass('d-none');
             $('#new-address-popup').addClass('d-none');
         });
-        $('#add-another-address').click(function() {
+        $('#add-another-address').click(function () {
             $('#new-address-popup').removeClass('d-none');
         });
     </script>
